<resources>
    <string name="app_name">post_task</string>
    <string name="hyperlink"><a href="https://unblast.com/color-schemes">https://unblast.com/color-schemes</a></string>
    <string name="bottonUp">...</string>
    <string name="unblast">Unblast</string>
    <string name="_2hrs">2hrs</string>
    <string name="buckle_up_because_change_is_coming_to_wordpress">Buckle up , because change is coming to Wordpress</string>
    <string name="_12">12</string>
    <string name="_1">1</string>
    <string name="_1_share">1 Share</string>
    <string name="comment">comment</string>
    <string name="share">share</string>
    <string name="like">like</string>
    <string name="mohamed_aboelftoh">Mohamed Aboelftoh</string>
</resources>