<?xml version="1.0" encoding="utf-8"?>



<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/bottomUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white3"
        android:text="@string/bottonUp"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/textprofile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/textprofile" />

    <de.hdodenhof.circleimageview.CircleImageView
    android:id="@+id/imageprofile"
    android:layout_width="40dp"
    android:layout_height="40dp"
    android:layout_marginStart="10dp"
    android:layout_marginTop="10dp"
    android:src="@drawable/miss"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    />
    <TextView
        android:id="@+id/textprofile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/unblast"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/imageprofile"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text2id"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/_2hrs"
        android:textSize="17sp"
        android:textStyle="bold"
        android:textColor="#9A9999"
        app:layout_constraintStart_toEndOf="@id/imageprofile"
        app:layout_constraintTop_toTopOf="@id/textprofile"

        />

    <TextView
        android:id="@+id/textPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:text="@string/buckle_up_because_change_is_coming_to_wordpress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textidlink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        android:text="@string/hyperlink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgePost"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="48dp"
        android:src="@color/yelow"
        app:layout_constraintTop_toBottomOf="@id/textidlink"
        tools:layout_editor_absoluteX="-٢٤dp" />

    <ImageView
        android:id="@+id/imagelike"
        android:layout_width="35dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:adjustViewBounds="true"
        android:src="@drawable/like3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgePost" />

    <TextView
        android:id="@+id/likesNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/_12"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/imagelike"
        app:layout_constraintTop_toBottomOf="@id/imgePost" />

    <ImageView
        android:id="@+id/arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:src="@drawable/arrow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgePost" />

    <ImageView
        android:id="@+id/imgprofile"
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/img_profile"
        app:layout_constraintEnd_toStartOf="@id/arrow"
        app:layout_constraintTop_toBottomOf="@id/imgePost" />
    <TextView
        android:id="@+id/share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/_1_share"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@id/imgprofile"
        app:layout_constraintTop_toBottomOf="@id/imgePost" />
    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white2"
        app:layout_constraintTop_toBottomOf="@id/imgePost" />

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintTop_toBottomOf="@id/divider">

        <Button
            android:id="@+id/like_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".9"
            android:background="@drawable/button_background"
            android:drawableLeft="@drawable/like"
            android:text="@string/like"
            android:textColor="@color/black"

            />

        <Button
            android:id="@+id/myButton1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:background="@drawable/button_background"
            android:drawableLeft="@drawable/comment"
            android:text="@string/comment"
            android:textColor="@color/black"

            />

        <Button
            android:id="@+id/myButton2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".9"
            android:background="@drawable/button_background"
            android:drawableLeft="@drawable/baseline_screen_share_24"
            android:text="@string/share"
            android:textColor="@color/black"

            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
